# open-llm-messaging

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  docker-compose.yml  openllm-messaging.drawio  pyproject.toml
docker/: openai.Dockerfile  telegram.Dockerfile
openllm_messaging/: openai_server.py  telegram_bot.py  telegram_client.py
openllm_messaging/llm/: message.py  model_message.py  modelmessage.py
openllm_messaging/llm/openai/: openai_adapter.py
openllm_messaging/messaging/: telegram.py  telegram_client.py
scripts/: test.sh
test/: coverage.xml
test/llm/: test_message.py  test_model_message.py
test/llm/openai/: test_openai_adapter.py
test/shared/: test_model_message.py
