[tool.poetry]
name = "openllm-messaging"
version = "0.0.1"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.30.1"
click = "^8.1.7"
python-telegram-bot = "^21.2"
flask = "^3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.poetry.scripts]
telegram = "openllm_messaging.telegram_bot:run"
openai = "openllm_messaging.openai_server:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
