[tool.poetry]
name = "openllm-messaging"
version = "0.0.1"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.32.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage-badge = "^1.1.1"
pytest-cov = "4.1.0"
setuptools = "^70.0.0"

[tool.poetry.group.telegram]
optional = true

[tool.poetry.group.telegram.dependencies]
python-telegram-bot = "^21.2"

[tool.poetry.group.openai]
optional = true

[tool.poetry.group.openai.dependencies]
openai = "^1.30.1"
flask = "^3.0.3"

[tool.poetry.scripts]
telegram = "openllm_messaging.telegram_bot:run"
openai = "openllm_messaging.openai_server:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s -v --disable-warnings"
testpaths = [
    "test",
]
